# Engagement_Tracking_Algorithm

./: .python-version  CMakeLists.txt  README.md  package.xml  requirements.txt
launch/: main.launch
scripts/: README.md  analysis.py  config.py  grid_video_to_img.py  listener.py  nose_tracker_on_rgb_img.py  recorder.py  synchronize_rgb_thermal.py  thermal_cam_relocate.py
scripts/protoring/: face_detector.py  face_landmark.py
scripts/protoring/models/: Models.md
scripts/protoring/models/pose_model/pose_model/: ReadMe.md
scripts/video/: README  README.md  thermal_cam_coordinate.npy
scripts/video/06_07_2022-14_23_27/: ReadMe.md
scripts/video/MS_test1/MS_test1_RGB_grid/test/rectangle_info/: test_nosetip_MS_test1_RGB-00000015.npy  test_nosetip_MS_test1_RGB-00000030.npy  test_nosetip_MS_test1_RGB-00000045.npy  test_nosetip_MS_test1_RGB-00000075.npy  test_nosetip_MS_test1_RGB-00000090.npy  test_nosetip_MS_test1_RGB-00000105.npy  test_nosetip_MS_test1_RGB-00000120.npy  test_nosetip_MS_test1_RGB-00000135.npy
scripts/video/MS_test1/MS_test1_THERMAL_grid/test/: nosetip_point_MS_test1_THERMAL-00000030.npy  nosetip_point_MS_test1_THERMAL-00000060.npy  nosetip_point_MS_test1_THERMAL-00000090.npy  nosetip_point_MS_test1_THERMAL-00000150.npy  nosetip_point_MS_test1_THERMAL-00000180.npy  nosetip_point_MS_test1_THERMAL-00000210.npy  nosetip_point_MS_test1_THERMAL-00000240.npy  nosetip_point_MS_test1_THERMAL-00000270.npy
src/: depth.py
