<package format="2">
  <name>engagement_queue_tracking</name>
  <version>0.0.1</version>
  <description>
    This algorithm is to approximate the engagement level in participants during
    Child-Robot Interaction (CRI) through use of visual and physiological cue tracking.
  </description>
  <maintainer email="zkaufman@protonmail.com">Zachary Kaufman</maintainer>
  <license>TODO</license>

  <author>Zachary Kaufman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>